[gd_scene load_steps=2 format=1]

[ext_resource path="res://main.gd" type="Script" id=1]

[node name="Node2D" type="Node2D"]

script/script = ExtResource( 1 )

[node name="buttonStartStop" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 30.0
margin/top = 30.0
margin/right = 190.0
margin/bottom = 70.0
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
text = "Start / Stop"
flat = false

[node name="buttonQuit" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 30.0
margin/top = 210.0
margin/right = 190.0
margin/bottom = 250.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Quit"
flat = false

[node name="labelGeneration" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 230.0
margin/top = 30.0
margin/right = 390.0
margin/bottom = 70.0
text = "Generation:"
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="buttonResetGrid" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 31.0
margin/top = 90.0
margin/right = 191.0
margin/bottom = 130.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Reset Grid"
flat = false

[node name="buttonStep" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 30.0
margin/top = 150.0
margin/right = 190.0
margin/bottom = 190.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Step"
flat = false

[connection signal="pressed" from="buttonStartStop" to="." method="_on_Button_pressed"]

[connection signal="pressed" from="buttonQuit" to="." method="_on_buttonQuit_pressed"]

[connection signal="pressed" from="buttonResetGrid" to="." method="_on_buttonResetGrid_pressed"]

[connection signal="pressed" from="buttonStep" to="." method="_on_buttonStep_pressed"]


